--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/angular": "^6.0.0",
     "@ionic/cordova-builders": "^7.0.0",
     "@ngneat/error-tailor": "^1.3.1",
+    "add": "^2.0.6",
     "cordova-sqlite-storage": "^6.0.0",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
@@ -59,6 +60,7 @@
     "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "5.27.1",
     "@typescript-eslint/parser": "5.27.1",
+    "cordova-android": "^10.1.2",
     "cordova-browser": "^6.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -91,7 +93,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   },
   "description": "An Ionic project"
