--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngneat/error-tailor": "^1.3.1",
     "@schematics/angular": "^15.2.2",
     "add": "^2.0.6",
+    "chart.js": "^4.2.1",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
     "sql.js": "1.3.2",
