--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@capacitor/keyboard": "~4.0.1",
     "@capacitor/status-bar": "~4.0.1",
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/in-app-browser": "^5.36.0",
     "@ionic/angular": "^6.0.0",
     "@ngneat/error-tailor": "^1.3.1",
     "@schematics/angular": "^15.2.2",
